Fix errors. Add virtual threads support